--- a/index.html
+++ b/index.html
@@ -6,15 +6,22 @@
   </head>
 
   <body>
-    <div>
+    <div class="input-area">
       <input placeholder="TODOを入力" />
       <button>追加</button>
     </div>
-    <div>
-      <p>未完了のTODO</p>
+    <div class="incompleate-area">
+      <p class="title">未完了のTODO</p>
       <ul>
         <li>
-          <div>
+          <div class="list-row">
+            <p>TODOです</p>
+            <button>完了</button>
+            <button>削除</button>
+          </div>
+        </li>
+        <li>
+          <div class="list-row">
             <p>TODOです</p>
             <button>完了</button>
             <button>削除</button>
@@ -23,11 +30,11 @@
       </ul>
     </div>
 
-    <div>
-      <p>完了したTODO</p>
+    <div class="compleate-area">
+      <p class="title">完了したTODO</p>
       <ul>
         <li>
-          <div>
+          <div class="list-row">
             <p>TODOでした</p>
             <button>戻す</button>
           </div>
