--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
     <div class="compleate-area">
       <p class="title">完了したTODO</p>
-      <ul>
+      <ul id="compleate-list">
         <li>
           <div class="list-row">
             <p>TODOでした</p>
