--- a/index.html
+++ b/index.html
@@ -12,34 +12,12 @@
     </div>
     <div class="incompleate-area">
       <p class="title">未完了のTODO</p>
-      <ul id="incompleate-list">
-        <li>
-          <div class="list-row">
-            <p>TODOです</p>
-            <button>完了</button>
-            <button>削除</button>
-          </div>
-        </li>
-        <li>
-          <div class="list-row">
-            <p>TODOです</p>
-            <button>完了</button>
-            <button>削除</button>
-          </div>
-        </li>
-      </ul>
+      <ul id="incompleate-list"></ul>
     </div>
 
     <div class="compleate-area">
       <p class="title">完了したTODO</p>
-      <ul id="compleate-list">
-        <li>
-          <div class="list-row">
-            <p>TODOでした</p>
-            <button>戻す</button>
-          </div>
-        </li>
-      </ul>
+      <ul id="compleate-list"></ul>
     </div>
 
     <script src="src/index.js"></script>
